--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <version>3.12.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
